--- a/Customer-Service/pom.xml
+++ b/Customer-Service/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Payment-Service</artifactId>
+	<artifactId>Customer-Service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Payment-Service</name>
-	<description>Payment-Service</description>
+	<name>Customer-Service</name>
+	<description>Customer-Service</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -31,6 +31,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -44,10 +49,6 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-    		<groupId>mysql</groupId>
-    		<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 	</dependencies>
 
